feat(Auth): implement Login and Jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.datasource.username=admin
 spring.datasource.password=agriptivo*
 spring.datasource.url=jdbc:mysql://agriptivo.c16o8ukm8wha.us-east-1.rds.amazonaws.com/quipux
 
-#config hibernate
+application.security.jwt.secret-key= hholla
+application.security.jwt.expiration = 86400000
+application.security.jwt.refresh-token.expiration = 604800000
+
+
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
