--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.datasource.username=admin
 spring.datasource.password=agriptivo*
 spring.datasource.url=jdbc:mysql://agriptivo.c16o8ukm8wha.us-east-1.rds.amazonaws.com/quipux
 
-application.security.jwt.secret-key= hholla
-application.security.jwt.expiration = 86400000
-application.security.jwt.refresh-token.expiration = 604800000
+application.security.jwt.secret-key=hhollaasdawad2dawe
+application.security.jwt.expiration=86400000
+application.security.jwt.refresh-token.expiration=604800000
 
 
 
