--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8092
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=admin
-spring.datasource.password=agriptivo*
-spring.datasource.url=jdbc:mysql://agriptivo.c16o8ukm8wha.us-east-1.rds.amazonaws.com/quipux
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.url=
 
 application.security.jwt.secret-key=hhollaasdawad2dawe
 application.security.jwt.expiration=86400000
